[package]
name = "bulwark"
version = "0.1.0"
edition = "2021"
description = "Network security daemon for open/untrusted wireless networks"
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["full"] }
nix = { version = "0.29", features = ["net"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
thiserror = "2"
libc = "0.2"

[dev-dependencies]
tempfile = "3"
